kubernetes-manifests/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # adding the shared-ingress-group to use it post app deployment
    alb.ingress.kubernetes.io/group.name: shared-ingress-group
    #added this for the certification of the domain name
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:124355660184:certificate/e046c3b9-5b24-481f-aa0d-b8f7cbd9e749
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: argocd.trialphase.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.trialphase.shop
      secretName: dummy-tls-secret-trail-1
